deps/v8/test/message/fail/arrow-bare-rest-param.out
*%(basename)s:7: SyntaxError: Unexpected token '...'
...x => 10
^^^
SyntaxError: Unexpected token '...'
